created and styled navbar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Black & White</title>
 </head>
 <body>
-    
+    <header>
+        <div class="navbar">
+            <div class="logo">
+                dailyphoto
+            </div>
+            <a href="#">facebook</a>
+            <a href="#">instagram</a>
+            <a href="#">twitter</a>
+        </div>
+    </header>
 </body>
 </html>
